# anseo

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  fly.toml  rust-toolchain.toml
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: boot.rs  color_validator.rs  lib.rs  main.rs  setup_probe.rs
apps/api/tests/: analytics.rs  analytics_live_db.rs  anomalies.rs  auth.rs  authz_surface_coverage.rs  bind_refusal.rs  brands.rs  citations.rs  comparisons.rs  ingest.rs  legacy_upgrade.rs  open_core_boundary.rs  operator_entities_live_db.rs  operator_plane1_live_db.rs  plugins.rs  project_header.rs  projects_api.rs  prompt_run_persist.rs  prompt_run_smoke.rs  prompts_run_summary.rs  prompts_similarity.rs  recommendations_lifecycle.rs  schedules_live_db.rs  setup.rs  site_analytics.rs  site_events.rs  suite.rs
apps/cli/: Cargo.toml
apps/cli/src/: datastore.rs  handoff.rs  lib.rs  main.rs  main_ogeo_shim.rs  preflight.rs  scaffold.rs
apps/cli/tests/: audit_smoke.rs  check_smoke.rs  cli_smoke.rs  login_smoke.rs  managed_pg_migrations.rs  mcp_install_config.rs  mcp_tools_smoke.rs  plugin_install.rs  plugin_search_smoke.rs  project_smoke.rs  recommend_smoke.rs  run_smoke.rs  schedule_smoke.rs  serve_smoke.rs  suite_smoke.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: benchmark_client.rs  dispatch.rs  error.rs  http_client.rs  lib.rs  main.rs  protocol.rs
apps/mcp/tests/: allow_public_gate.rs  benchmark_privacy.rs  mcp_auth_header.rs  multiproject_parity.rs  plugin_surface_boundary.rs  transport_parity.rs
apps/worker/: Cargo.toml  Dockerfile
apps/worker/src/: dispatch.rs  etl.rs  lib.rs  main.rs  run.rs  verification.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: citation_graph.rs  heatmap.rs  lib.rs  metrics_store.rs  plugin.rs  sentiment.rs  volatility.rs
crates/analytics/tests/: clickhouse_etl_idempotent.rs  clickhouse_parity.rs  metrics_store_live_db.rs  migrate_resumable.rs
crates/audit/: Cargo.toml
crates/audit/src/: central_log.rs  lib.rs
crates/authn/: Cargo.toml
crates/authn/src/: bearer.rs  error.rs  invites.rs  jwks.rs  lib.rs  totp.rs
crates/benchmark/: Cargo.toml
crates/benchmark/data/: canonical_geo_prompt_suite.v1.json
crates/benchmark/src/: canonical_suite.rs  crypto.rs  lib.rs  redactor.rs
crates/benchmark/tests/: consent_live_db.rs  keystore_alignment.rs  no_contribution_without_kek.rs
crates/billing/: Cargo.toml
crates/billing/src/: lib.rs
crates/comms/: Cargo.toml
crates/comms/src/: dispatch.rs  lib.rs  recipient.rs  repo.rs  template.rs  token.rs  transport.rs
crates/core/: Cargo.toml
crates/core/src/: api_key.rs  config.rs  egress.rs  error.rs  hallucination.rs  ids.rs  lib.rs  secret.rs  secret_store.rs  similarity.rs  telemetry.rs
crates/core/tests/: phase1_contract_freeze.rs  tracing_redaction.rs
crates/crawler-ingest/: Cargo.toml
crates/crawler-ingest/src/: adapters.rs  bot_identity.rs  lib.rs  metrics.rs  model.rs  sink.rs
crates/crawler-ingest/tests/: postgres_sink.rs
crates/extractors/: Cargo.toml
crates/extractors/src/: citations.rs  claims.rs  diff.rs  lib.rs  mentions.rs  persist.rs  plugin.rs  sentiment.rs
crates/extractors/tests/: claim_persist.rs  fixture_set_snapshot.rs  ranking_property.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: capability.rs  lib.rs  loader.rs  registry.rs  signing.rs  subprocess.rs
crates/plugin-host/tests/: capability_matrix.rs  first_party_plugins.rs  signing_vectors.rs  subprocess_sandbox.rs
crates/plugin-manifest/: Cargo.toml
crates/plugin-manifest/src/: capability.rs  install_record.rs  lib.rs  manifest.rs  plugin_type.rs  tests.rs  trend_kind.rs  validation.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  cost.rs  egress.rs  gemini.rs  grok.rs  lib.rs  mistral.rs  mock.rs  openai.rs  openrouter.rs  orchestrator.rs  perplexity.rs  persistence.rs  plugin.rs  registry.rs
crates/providers/tests/: persistence_smoke.rs  plugin_provider_seam.rs  provider_contract.rs  provider_wiremock.rs  wiremock_smoke.rs
crates/recommendations/: Cargo.toml
crates/recommendations/src/: assembly.rs  engine.rs  input.rs  kind.rs  kinds.rs  lib.rs  lifecycle.rs  llm.rs  llm_kinds.rs  wire.rs
crates/recommendations/tests/: determinism.rs  lifecycle.rs  llm_lane.rs  reproducibility_invariant.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: dispatch.rs  events.rs  lib.rs  transport.rs  worker.rs
crates/scheduler/tests/: notification_isolation.rs  scheduler_live_db.rs  slack_dispatch.rs  webhook_dispatch_tick_live_db.rs  webhook_dispatcher_http.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20260525120000_initial.sql  20260528120000_schedules_and_webhooks.sql  20260528130000_api_keys.sql  20260528140000_webhook_delivery_payload.sql  20260528150000_benchmark_consent.sql  20260528200000_prompts_unique_name.sql  20260529120000_recommendations.sql  20260529120100_plugin_installs.sql  20260530100000_mcp_tool_calls.sql  20260530110000_analytics_migration_state.sql  20260530120000_recommendations_arch_align.sql  20260531120000_alert_rules.sql  20260531130000_run_provenance.sql  20260531140000_etl_jobs.sql  20260531150000_provider_identity.sql  20260601120000_brand_config.sql  20260601130000_prompt_tags.sql  20260602100000_mention_sentiment.sql  20260602110000_brand_accuracy_claims.sql  20260602120000_crawler_events.sql  20260602130000_brand_site_url.sql  20260602140000_audit_runs.sql  20260603120000_project_archive.sql  20260605100000_entities_registry.sql  20260605110000_entity_dedup_tables.sql  20260605120000_comms_subsystem.sql  20260605130000_disputes.sql  20260606120000_brand_visibility_tier.sql  20260606130000_domain_verification.sql  20260606140000_identified_contribution_resolution.sql  20260606150000_site_events.sql  20260606160000_site_dimension_rollups.sql  (+25 more)
crates/wire-schema/: Cargo.toml  openapi.json
plugins/anseo-example-provider/: Cargo.toml  manifest.yaml
plugins/anseo-ndjson-export/: Cargo.toml  manifest.yaml
plugins/anseo-trend-analytics/: Cargo.toml  manifest.yaml
(+606 files in other folders)
