[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/worker",
    "apps/cli",
    "apps/mcp",
    "crates/core",
    "crates/providers",
    "crates/extractors",
    "crates/storage",
    "crates/analytics",
    "crates/scheduler",
    "crates/plugin-host",
    "crates/wire-schema",
]

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-bunyan-formatter = "0.3"
tokio-test = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "migrate", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
wiremock = "0.6"
insta = { version = "1", features = ["yaml", "json"] }
ulid = { version = "1", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
utoipa = { version = "5", features = ["chrono", "preserve_order"] }
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
