[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/worker",
    "apps/cli",
    "apps/mcp",
    "crates/core",
    "crates/providers",
    "crates/extractors",
    "crates/storage",
    "crates/analytics",
    "crates/scheduler",
    "crates/plugin-host",
    "crates/plugin-manifest",
    "crates/wire-schema",
    "crates/benchmark",
]

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-bunyan-formatter = "0.3"
tokio-test = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "migrate", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
wiremock = "0.6"
insta = { version = "1", features = ["yaml", "json"] }
proptest = "1"
tracing-test = "0.2"
ulid = { version = "1", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
utoipa = { version = "5", features = ["chrono", "preserve_order"] }
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
clap = { version = "4", features = ["derive", "wrap_help"] }
dialoguer = { version = "0.11", default-features = false }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
is-terminal = "0.4"
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "apple-native", "windows-native"] }
age = { version = "0.10", default-features = false, features = ["armor"] }
rpassword = "7"
