[package]
name = "opengeo-api"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "opengeo-api"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
opengeo-core = { path = "../../crates/core", features = ["sqlx"] }
opengeo-storage = { path = "../../crates/storage" }
opengeo-analytics = { path = "../../crates/analytics" }
opengeo-providers = { path = "../../crates/providers" }
opengeo-scheduler = { path = "../../crates/scheduler" }
opengeo-wire-schema = { path = "../../crates/wire-schema" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
