[package]
name = "opengeo-api"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "opengeo-api"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
opengeo-core = { path = "../../crates/core", features = ["sqlx"] }
opengeo-storage = { path = "../../crates/storage" }
opengeo-analytics = { path = "../../crates/analytics" }
opengeo-crawler-ingest = { path = "../../crates/crawler-ingest" }
opengeo-audit = { path = "../../crates/audit" }
opengeo-providers = { path = "../../crates/providers" }
opengeo-extractors = { path = "../../crates/extractors" }
opengeo-scheduler = { path = "../../crates/scheduler" }
opengeo-recommendations = { path = "../../crates/recommendations" }
opengeo-wire-schema = { path = "../../crates/wire-schema" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = []
# Premium / closed-source surface. Enables the entitlement-gated
# hallucination (brand-accuracy) evaluator and its REST routes. The
# default OSS build must NOT enable this — it pulls in the premium
# boundary test in `tests/open_core_boundary.rs`.
pro = []
