[package]
name = "anseo-api"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "anseo-api"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anseo-core = { path = "../../crates/core", features = ["sqlx"] }
anseo-storage = { path = "../../crates/storage" }
anseo-authz = { path = "../../crates/authz" }
anseo-analytics = { path = "../../crates/analytics" }
anseo-crawler-ingest = { path = "../../crates/crawler-ingest" }
anseo-audit = { path = "../../crates/audit" }
anseo-providers = { path = "../../crates/providers" }
anseo-extractors = { path = "../../crates/extractors" }
anseo-plugin-host = { path = "../../crates/plugin-host" }
anseo-plugin-manifest = { path = "../../crates/plugin-manifest" }
anseo-benchmark = { path = "../../crates/benchmark" }
anseo-scheduler = { path = "../../crates/scheduler" }
anseo-recommendations = { path = "../../crates/recommendations" }
anseo-comms = { path = "../../crates/comms" }
anseo-wire-schema = { path = "../../crates/wire-schema" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = { workspace = true }
async-trait = "0.1"
subtle = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hickory-resolver = "0.24"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }

[features]
default = []
# Premium / closed-source surface. Enables the entitlement-gated
# hallucination (brand-accuracy) evaluator and its REST routes. The
# default OSS build must NOT enable this — it pulls in the premium
# boundary test in `tests/open_core_boundary.rs`.
pro = []
