[package]
name = "opengeo-cli"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ogeo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
opengeo-analytics = { path = "../../crates/analytics" }
opengeo-benchmark = { path = "../../crates/benchmark" }
opengeo-core = { path = "../../crates/core", features = ["sqlx"] }
opengeo-providers = { path = "../../crates/providers" }
opengeo-scheduler = { path = "../../crates/scheduler" }
opengeo-storage = { path = "../../crates/storage" }
opengeo-wire-schema = { path = "../../crates/wire-schema" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dialoguer = { workspace = true }
is-terminal = { workspace = true }
thiserror = { workspace = true }
rpassword = { workspace = true }
chrono = { workspace = true }

[features]
clickhouse = ["opengeo-analytics/clickhouse"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
