[package]
name = "opengeo-cli"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ogeo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Story 37.1: `ogeo serve` boots the HTTP API and the background worker loop in
# one process by consuming these two as libraries (their public boot/run seams).
# `opengeo-worker` defaults to its `clickhouse` feature; turn it off here and let
# the CLI's own `clickhouse` feature re-enable it so the OSS build stays lean.
opengeo-api = { path = "../api" }
opengeo-worker = { path = "../worker", default-features = false }
opengeo-analytics = { path = "../../crates/analytics" }
opengeo-audit = { path = "../../crates/audit" }
opengeo-benchmark = { path = "../../crates/benchmark" }
opengeo-core = { path = "../../crates/core", features = ["sqlx"] }
opengeo-crawler-ingest = { path = "../../crates/crawler-ingest" }
opengeo-plugin-manifest = { path = "../../crates/plugin-manifest" }
opengeo-plugin-host = { path = "../../crates/plugin-host" }
opengeo-providers = { path = "../../crates/providers" }
opengeo-recommendations = { path = "../../crates/recommendations" }
opengeo-scheduler = { path = "../../crates/scheduler" }
opengeo-storage = { path = "../../crates/storage" }
opengeo-wire-schema = { path = "../../crates/wire-schema" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dialoguer = { workspace = true }
is-terminal = { workspace = true }
thiserror = { workspace = true }
rpassword = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
hex = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }

[features]
clickhouse = ["opengeo-analytics/clickhouse", "opengeo-worker/clickhouse"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
rand = "0.8"
