[package]
name = "anseo-cli"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "anseo"
path = "src/main.rs"

# Back-compat shim: `ogeo` is deprecated in favour of `anseo`.
# Ships alongside `anseo` for one release so existing scripts don't break.
[[bin]]
name = "ogeo"
path = "src/main_ogeo_shim.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Story 37.1: `ogeo serve` boots the HTTP API and the background worker loop in
# one process by consuming these two as libraries (their public boot/run seams).
# `anseo-worker` defaults to its `clickhouse` feature; turn it off here and let
# the CLI's own `clickhouse` feature re-enable it so the OSS build stays lean.
anseo-api = { path = "../api" }
anseo-worker = { path = "../worker", default-features = false }
anseo-analytics = { path = "../../crates/analytics" }
anseo-audit = { path = "../../crates/audit" }
anseo-benchmark = { path = "../../crates/benchmark" }
anseo-core = { path = "../../crates/core", features = ["sqlx"] }
anseo-crawler-ingest = { path = "../../crates/crawler-ingest" }
anseo-plugin-manifest = { path = "../../crates/plugin-manifest" }
anseo-plugin-host = { path = "../../crates/plugin-host" }
anseo-providers = { path = "../../crates/providers" }
anseo-recommendations = { path = "../../crates/recommendations" }
anseo-scheduler = { path = "../../crates/scheduler" }
anseo-storage = { path = "../../crates/storage" }
anseo-wire-schema = { path = "../../crates/wire-schema" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dialoguer = { workspace = true }
is-terminal = { workspace = true }
thiserror = { workspace = true }
rpassword = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
hex = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }

[features]
clickhouse = ["anseo-analytics/clickhouse", "anseo-worker/clickhouse"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
rand = "0.8"
