[package]
name = "opengeo-mcp"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "opengeo_mcp"
path = "src/lib.rs"

[[bin]]
name = "opengeo-mcp"
path = "src/main.rs"

[dependencies]
opengeo-core = { path = "../../crates/core" }
opengeo-wire-schema = { path = "../../crates/wire-schema" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "tower-log"] }
tower = { version = "0.4" }
tokio-stream = { version = "0.1" }

[dev-dependencies]
opengeo-plugin-manifest = { path = "../../crates/plugin-manifest" }
# Story 36.9 — cross-surface project-switch parity acceptance. The MCP server
# is a thin proxy over the `/v1` API, so the parity test drives the REAL API
# router (no API source is touched) plus the MCP `ApiClient` against the same
# live server, asserting the project selector is byte-for-byte equivalent to
# sending the `X-OpenGEO-Project` header directly (the Web proxy path).
opengeo-api = { path = "../api" }
opengeo-storage = { path = "../../crates/storage" }
opengeo-scheduler = { path = "../../crates/scheduler" }
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
