[package]
name = "anseo-worker"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Story 31-4: the worker exposes a lib target so the API (story 31-5) can call
# `anseo_worker::etl::enqueue_etl_job`, and the bin drives the poll loop.
[lib]
name = "anseo_worker"
path = "src/lib.rs"

[[bin]]
name = "anseo-worker"
path = "src/main.rs"

[dependencies]
anseo-core = { path = "../../crates/core" }
anseo-storage = { path = "../../crates/storage" }
anseo-scheduler = { path = "../../crates/scheduler" }
# Schedule dispatch drives the live provider matrix through the orchestrator.
anseo-providers = { path = "../../crates/providers" }
# Story 31-4: link the resumable Postgres→ClickHouse ETL engine. The analytics
# `clickhouse` feature (which pulls in reqwest) is propagated through this
# crate's own `clickhouse` feature below.
anseo-analytics = { path = "../../crates/analytics" }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
# Story 43.2 (AC-5): real DNS TXT resolver for the daily re-verification job
# (revoke dns_txt-verified entities whose challenge TXT record was removed).
hickory-resolver = "0.24"
async-trait = "0.1"

[features]
# Default-on so `cargo build -p anseo-worker` exercises the live ETL path
# (the engine + ClickHouseMetricsStore link). Build with
# `--no-default-features` to get the queue-only flavor where `run_migration`
# reports a clear "rebuild with clickhouse" error instead of linking reqwest.
default = ["clickhouse"]
clickhouse = ["anseo-analytics/clickhouse"]
