[package]
name = "anseo-analytics"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anseo-core = { path = "../core", features = ["sqlx"] }
anseo-storage = { path = "../storage" }
anseo-plugin-manifest = { path = "../plugin-manifest" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
urlencoding = { version = "2.1", optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
uuid = { workspace = true }

[features]
live_db_tests = []
clickhouse = ["dep:reqwest", "dep:urlencoding", "dep:uuid"]
