[package]
name = "opengeo-audit"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Epic 32 — deterministic citation-readiness audit engine and owned-page
# crawler. The engine is pure over HTML fixtures; the crawler is the only
# network-aware boundary.

[dependencies]
opengeo-recommendations = { path = "../recommendations" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"

[dev-dependencies]
tokio = { workspace = true }
