[package]
name = "anseo-authn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
base64 = "0.22"
tokio = { workspace = true }
# TOTP (Story 21.3)
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
hmac = { workspace = true }
sha2 = { workspace = true }
aes-gcm = "0.10"
base32 = "0.5.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
