[package]
name = "opengeo-benchmark"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
opengeo-core = { path = "../core" }
opengeo-storage = { path = "../storage" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serial_test = "3"

[features]
live_db_tests = []
