[package]
name = "anseo-billing"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
stripe = { package = "async-stripe", version = "1.0.0-rc.6", default-features = false, features = ["rustls-ring", "rustls-tls-webpki-roots"] }
stripe-webhook = { package = "async-stripe-webhook", version = "1.0.0-rc.6", features = ["deserialize"] }
