[package]
name = "opengeo-core"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
# Enables `sqlx::Type`/`Encode`/`Decode` impls on the ULID newtypes so they can
# be used directly in `sqlx::query_as!` against Postgres `UUID` columns
# (Story 1.3 AC-9). Gated so non-storage consumers stay lean.
sqlx = ["dep:sqlx"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
ulid = { workspace = true }
secrecy = { workspace = true }
schemars = { workspace = true }
utoipa = { workspace = true }
keyring = { workspace = true }
age = { workspace = true }
sqlx = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }
