[package]
name = "anseo-crawler-ingest"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anseo-core = { path = "../core", features = ["sqlx"] }
anseo-storage = { path = "../storage" }
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
clickhouse = ["dep:reqwest"]
live_db_tests = []

[dev-dependencies]
tempfile = { workspace = true }
