[package]
name = "opengeo-extractors"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
opengeo-core = { path = "../core" }
opengeo-storage = { path = "../storage" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
url = "2"
regex = "1"
once_cell = "1"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
