[package]
name = "anseo-plugin-host"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anseo-plugin-manifest = { path = "../plugin-manifest" }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rand = "0.8"
tempfile = { workspace = true }
