[package]
name = "anseo-plugin-host"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
# Story 41.4: opt-in signing *producers* (keygen + sign). Off by default so the
# verify-only build (worker / install path) never pulls in `SigningKey` / `rand`.
# The CLI's `anseo plugin {keygen,sign}` and the CI signing job enable this.
signing-tools = ["dep:rand", "ed25519-dalek/rand_core"]

[dependencies]
anseo-plugin-manifest = { path = "../plugin-manifest" }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# Optional: only compiled in when `signing-tools` is enabled (keygen RNG).
rand = { version = "0.8", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rand = "0.8"
tempfile = { workspace = true }
