[package]
name = "opengeo-providers"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
opengeo-core = { path = "../core", features = ["sqlx"] }
opengeo-storage = { path = "../storage" }
async-trait = "0.1"
sqlx = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
