[package]
name = "opengeo-recommendations"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Story 19.1 — in-process GEO Recommendations engine (AD-Phase3-RecommendationsInProcess).
# Pure library: the engine operates over an `EngineInput` bag of pre-aggregated
# data + config, so it is deterministic and unit-testable without a live DB.
# Wiring the real Postgres/ClickHouse/benchmark data sources into `EngineInput`
# is a consumer concern (Story 19.6 `/v1/recommendations/generate`).

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
