[package]
name = "opengeo-storage"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
opengeo-core = { path = "../core", features = ["sqlx"] }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
